🐛 vercelデプロイエラー修正

--- a/.env
+++ b/.env
@@ -23,4 +23,4 @@ GITHUB_SECRET="0ee1059f3a1600d888e69427b9af48e2e1171ec4"
 
 NEXTAUTH_SECRET="63TvvJDu+As2suFr2l+zWEBG9RttZJs2iYmPlKYt+4Q="
 
-NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_BASE_URL="https://todo-app-seven-flame-99.vercel.app"
